[gd_scene load_steps=4 format=3 uid="uid://b6w6khy2v04x1"]

[ext_resource type="Script" uid="uid://bdqfba7aw8dgh" path="res://scripts/enemies/attack_scripts/enemy_enoki_attack.gd" id="1_iyfiy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_iyfiy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iyfiy"]
size = Vector3(4.4292, 1, 1)

[node name="EnemyEnokiAttackComponent" type="Node3D"]
script = ExtResource("1_iyfiy")

[node name="MeleeAttackRange" type="Area3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeAttackRange"]
shape = SubResource("SphereShape3D_iyfiy")

[node name="MeleeDamageArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31399, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeDamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877686, 0, 0)
shape = SubResource("BoxShape3D_iyfiy")

[node name="BulletSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.50245, 4.51524, -0.292681)

[connection signal="area_entered" from="MeleeAttackRange" to="." method="_on_melee_attack_range_entered"]
[connection signal="area_exited" from="MeleeAttackRange" to="." method="_on_melee_attack_range_exited"]
[connection signal="area_entered" from="MeleeDamageArea" to="." method="_on_melee_damage_area_entered"]
[connection signal="area_exited" from="MeleeDamageArea" to="." method="_on_melee_damage_area_exited"]
